policykit-1 (0.110-3) UNRELEASED; urgency=low

  * Add 00git_pkexec_pam_env.patch: pkexec: Set process environment from
    pam_getenvlist(). Backported from upstream git head.
  * 01_pam_polkit.patch: Adjust patch to invoke pam_env, so
    our global settings from /etc/default/locale are applied correctly.
    Thanks Steve Langasek!

 -- Martin Pitt <mpitt@debian.org>  Fri, 12 Apr 2013 05:35:27 +0200

policykit-1 (0.110-2) experimental; urgency=low

  * When cleaning up /etc/polkit-1/nullbackend.conf.d/ and
    /etc/polkit-1/localauthority.conf.d/ don't fail if those directories have
    already been removed. (Closes: #698085)

 -- Michael Biebl <biebl@debian.org>  Mon, 14 Jan 2013 06:01:36 +0100

policykit-1 (0.110-1) experimental; urgency=low

  * New upstream release.
  * Drop patches which have been merged upstream.
  * Drop debian/clean, no longer necessary.

 -- Michael Biebl <biebl@debian.org>  Wed, 09 Jan 2013 21:40:35 +0100

policykit-1 (0.109-1) experimental; urgency=low

  * New upstream release. (Closes: #689473)
  * Update Build-Depends:
    - Bump libglib2.0-dev to (>= 2.30.0).
    - Add libmozjs185-dev for the JS rules support.
  * Remove polkitbackend library.
  * Use systemd service file provided by upstream.
  * Reload systemd as the name of the .service file has changed.
  * Update policykit-1.install:
    - Private binaries have been moved to /usr/lib/polkit-1.
    - The extension system has been removed.
    - The .pkla files are gone and so is /var/lib/polkit-1.
  * Remove obsolete conffiles and the corresponding (empty) directories on
    upgrades.
  * Convert the old localauthority conf files to the new JavaScript based
    rules file format and make sure it is executed before 50-default.rules.
  * Refresh patches to apply without fuzz.
  * The polkitd daemon now runs as unprivileged polkitd user instead of root.
    Create this system user in postinst and change the directory permissions