@@ -4,7 +4,7 @@
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 %:
-	dh $@ --with autoreconf
+	dh $@ --with autoreconf,gir
 
 DPKG_GENSYMBOLS_CHECK_LEVEL=4
 export DPKG_GENSYMBOLS_CHECK_LEVEL
@@ -25,10 +25,6 @@ override_dh_auto_test:
 	# the system D-BUS tests can't work on the buildds, so don't let a
 	# failed test fail the build
 	make check || true
-
-override_dh_shlibdeps:
-	dh_shlibdeps
-	dh_girepository
 
 override_dh_install:
 	dh_install
